<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hammad.iphoneringtones.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallpapers"
        android:name="com.hammad.iphoneringtones.ui.wallpapers.WallpapersFragment"
        android:label="@string/menu_wallpapers"
        tools:layout="@layout/fragment_wallpapers" />

    <fragment
        android:id="@+id/nav_ringtones"
        android:name="com.hammad.iphoneringtones.ui.ringtones.RingtonesFragment"
        android:label="@string/menu_ringtones"
        tools:layout="@layout/fragment_ringtones" />
</navigation>