<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_3sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/allow_modify_system_settings"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_resource_switch"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@android:color/black"
        android:text="@string/permission_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/allowPermission"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/allow_permission"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="@drawable/bg_ok_button"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>
