<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:id="@+id/mainLayoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/ic_musical_download" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/success_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shareButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/style_button"
                android:gravity="center"
                android:text="@string/share"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@drawable/text_button"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/closeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/style_button"
                android:gravity="center"
                android:text="@string/close"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@drawable/text_button"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</androidx.cardview.widget.CardView>