<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <RelativeLayout
        android:id="@+id/songItemLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/bg_gradient1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:focusable="false"
            android:scaleType="centerCrop"
            android:src="@drawable/item_bg" />

        <ProgressBar
            android:id="@+id/progress_bar_play_ringtone_song_item"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:progress="0"
            android:progressTint="@color/shadow"
            android:scaleY="25"
            android:secondaryProgress="100"
            android:secondaryProgressTint="@color/transparent" />

        <RelativeLayout
            android:id="@+id/relative_play_ringtone_song_item"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"
            android:clickable="false"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_play_ringtone_song_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/music_player"
                android:src="@drawable/play_icon_drawable"
                android:visibility="visible"
                app:tint="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title_ringtone_song_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/iv_set_ringtone_song_item"
            android:layout_toEndOf="@id/relative_play_ringtone_song_item"
            android:ellipsize="end"
            android:lines="1"
            android:marqueeRepeatLimit="1"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_duration_ringtone_song_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_ringtone_song_item"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toStartOf="@id/iv_set_ringtone_song_item"
            android:layout_toEndOf="@id/relative_play_ringtone_song_item"
            android:gravity="start"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/iv_set_ringtone_song_item"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/imageview_shadow_rounded"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/set_ringtone"
            android:src="@drawable/download_change_state_icon"
            app:tint="@color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
