<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_bottom_dialog"
    android:minHeight="@dimen/_200sdp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_40sdp">

    <View
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_5sdp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/navigate_line_bg"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center_horizontal"
        android:background="@color/grey"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_title_wallpaper_bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/what_would_you_like_to_do"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear_set_wallpaper_bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="start"
            android:padding="@dimen/_5sdp"
            android:text="@string/set_as_wallpaper"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_wallpaper_icon"
            app:drawableTint="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_set_lock_screen_wallpaper_bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="start"
            android:padding="@dimen/_5sdp"
            android:text="@string/set_as_lock_screen"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_lock_screen_icon"
            app:drawableTint="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_set_both_bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="start"
            android:padding="@dimen/_5sdp"
            android:text="@string/set_both"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_wallpaper_lock_screen_icon"
            app:drawableTint="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_download_wallpaper_bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="start"
            android:padding="@dimen/_5sdp"
            android:text="@string/download_wallpaper"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_download_pressed_icon"
            app:drawableTint="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
